Корректировка package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "test-form",
+  "name": "internship",
   "version": "0.1.0",
   "private": true,
+  "author": "serviktor050",
+  "homepage": "https://github.com/serviktor050/internship",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
