--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "author": "serviktor050",
-  "homepage": "https://github.com/serviktor050/internship",
+  "homepage": "https://serviktor050.github.io/internship/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
